use script and css from node_modules

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8">
   <title>TGG-Editor</title>
 
-  <link rel="stylesheet" type="text/css" href="css/joint.css" />
+  <link rel="stylesheet" type="text/css" href="node_modules/jointjs/dist/joint.min.css" />
   <link rel="stylesheet" type="text/css" href="css/style.css" />
-  <script src="js/jquery.min.js"></script>
-  <script src="js/lodash.min.js"></script>
-  <script src="js/backbone-min.js"></script>
-  <script src="js/joint.js"></script>
-  <script src="js/joint.shapes.devs.min.js"></script>
+  <script src="node_modules/jquery/dist/jquery.min.js"></script>
+  <script src="node_modules/lodash/index.js"></script>
+  <script src="node_modules/backbone/backbone-min.js"></script>
+  <script src="node_modules/jointjs/dist/joint.min.js"></script>
+  <script src="node_modules/jointjs/dist/joint.shapes.devs.min.js"></script>
 
 </head>
 <body>
