--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="#about">Load Rule</a></li>
+            <li><a href="#contact">Save Rule</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -129,7 +129,7 @@ console.log("All events", evt, x, y);
                 text: { text: 'NAC Node', fill: 'black' },
               },
       /* Weitere Attribute des Knotens*/
-      nodeAttr: { 'type': 'contextNode' }
+      nodeAttr: { 'type': 'nacNode' }
   });
 
   var constraintNode = new joint.shapes.basic.Rect({
@@ -142,7 +142,7 @@ console.log("All events", evt, x, y);
                 text: { text: 'Constraint Node', fill: 'black' },
               },
       /* Weitere Attribute des Knotens*/
-      nodeAttr: { 'type': 'corrNode' }
+      nodeAttr: { 'type': 'constraintNode' }
   });
 
   var corrNode = new joint.shapes.basic.Path({
@@ -287,41 +287,30 @@ var height = 0;
               $(".editNode").append("<button class='addLinkBtn'></button>")
             }
 
-            var elemStr = '<div id="toolboxSection"><ul><li>';
-            elemStr += '<label>Name:</label>';
-            elemStr += '<input class="input" id="nodeName" value="' + cellView.model.get('attrs').text.text + '"/></li>';
-            elemStr += '<li><label>Type:</label><select class="input" id="nodeType">';
-            switch(cellView.model.get('nodeAttr').type) {
-              case "contextNode":
-                elemStr += '<option value="produceNode">Produce Node</option>';
-                elemStr += '<option value="contextNode" selected>Context Node</option>';
-                elemStr += '<option value="nacNode">NAC Node</option>';
-                elemStr += '<option value="constraintNode">Contraint Node</option>';
-                break;
-              case "produceNode":
-                elemStr += '<option value="produceNode" selected>Produce Node</option>';
-                elemStr += '<option value="contextNode">Context Node</option>';
-                elemStr += '<option value="nacNode">NAC Node</option>';
-                elemStr += '<option value="constraintNode">Contraint Node</option>';
-                break;
-              case "nacNode":
-                elemStr += '<option value="produceNode">Produce Node</option>';
-                elemStr += '<option value="contextNode">Context Node</option>';
-                elemStr += '<option value="nacNode" selected>NAC Node</option>';
-                elemStr += '<option value="constraintNode">Contraint Node</option>';
-                break;
-              case "constraintNode":
-                elemStr += '<option value="produceNode">Produce Node</option>';
-                elemStr += '<option value="contextNode">Context Node</option>';
-                elemStr += '<option value="nacNode">NAC Node</option>';
-                elemStr += '<option value="constraintNode" selected>Contraint Node</option>';
-                break;
-              default:
-                elemStr += '';
-              }
-
-            elemStr += '</select></li></ul></div>';
+            var elemStr = `
+            <div id="toolboxSection">
+              <ul>
+                <li>
+                  <label>Name:</label>
+                  <input class="input" id="nodeName" value="${cellView.model.get('attrs').text.text}"/>
+                </li>
+                <li>
+                  <label>Domain:</label>
+                  <input class="input" id="domain" value="${cellView.model.get('domain')}"/>
+                </li>
+                <li>
+                  <label>Type:</label>
+                  <select class="input" id="nodeType">
+                    <option value="produceNode">Produce Node</option>
+                    <option value="contextNode">Context Node</option>
+                    <option value="nacNode">NAC Node</option>
+                    <option value="constraintNode">Constraint Node</option>
+                  </select>
+                </li>
+              </ul>
+            </div>`;
             $("#toolbox").append(elemStr);
+            $('#nodeType').val(cellView.model.get('nodeAttr').type);
 
             $("#nodeName").keyup(function(){
               cellView.model.attr('text/text', $("#nodeName").val());
