use bootstrap layout

--- a/index.html
+++ b/index.html
@@ -37,16 +37,22 @@
         </div><!--/.nav-collapse -->
       </div>
     </nav>
-    <div class="container">
-      <div class="row" id="stencilArea">
-        <div id="stencil"></div>
-      </div>
-      <div class="row" id="paperArea">
+    <div class="container-fluid">
+      <div class="panel panel-default">
+        <div class="" id="stencilArea">
+          <div id="stencil"></div>
+        </div>
+        <div class="" id="paperArea">
           <div id="paper"></div>
+        </div>
       </div>
-      <div class="row" id="toolbox">
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <div class="panel-title">Node Attributes</div>
+        </div>
+        <div class="panel-body" id="toolbox"></div>
       </div>
-    </div>
+  </div>
 
 <script type="text/javascript">
 
