--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>TGG-Editor</title>
@@ -14,50 +15,50 @@
   <script src="node_modules/jointjs/dist/joint.min.js"></script>
   <script src="node_modules/jointjs/dist/joint.shapes.devs.min.js"></script>
   <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-
 </head>
+
 <body>
   <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">TGG Editor</a>
-        </div>
-        <div id="navbar" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">Load Rule</a></li>
-            <li><a href="#contact">Save Rule</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
+        <a class="navbar-brand" href="#">TGG Editor</a>
       </div>
-    </nav>
-    <div class="container-fluid">
-      <div class="panel panel-default">
-        <div class="" id="stencilArea">
-          <div id="stencil"></div>
-        </div>
-        <div class="" id="paperArea">
-          <div id="paper"></div>
-        </div>
+      <div id="navbar" class="collapse navbar-collapse">
+        <ul class="nav navbar-nav">
+          <li class="active"><a href="#">Home</a></li>
+          <li><a href="#about">Load Rule</a></li>
+          <li><a href="#contact">Save Rule</a></li>
+        </ul>
       </div>
-      <div class="panel panel-default">
-        <div class="panel-heading">
-          <div class="panel-title">Node Attributes</div>
-        </div>
-        <div class="panel-body" id="toolbox"></div>
+      <!--/.nav-collapse -->
+    </div>
+  </nav>
+  <div class="container-fluid">
+    <div class="panel panel-default">
+      <div class="" id="stencilArea">
+        <div id="stencil"></div>
       </div>
+      <div class="" id="paperArea">
+        <div id="paper"></div>
+      </div>
+    </div>
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <div class="panel-title">Node Attributes</div>
+      </div>
+      <div class="panel-body" id="toolbox"></div>
+    </div>
   </div>
 
+  <script src="js/tggShapes.js"></script>
+  <script src="js/tgg_editor.js"></script>
+  <script src="js/example_graph.js"></script>
+</body>
 
-    <script src="js/tggShapes.js"></script>
-    <script src="js/tgg_editor.js"></script>
-    <script src="js/example_graph.js"></script>
-
-  </body>
 </html>
